# xedio

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: CI.yml
apps/xdata-app/: CMakeLists.txt  Cargo.toml  build.rs
apps/xdata-app/deploy/: Dockerfile  README.md  deployment.yaml  statefulset.yaml
apps/xdata-app/deploy/kind/: kind-config.yaml
apps/xdata-app/proto/: helloworld.proto
apps/xdata-app/src/: greeter.rs  leader.rs  main.rs  storage.rs  storage_client.rs  tests.rs
docs/: Internals.md
xedio-data/: Cargo.toml
xedio-data/src/: lib.rs  traits2.rs  types.rs
xedio-data/src/repl/: mgr.rs  mod.rs  tests.rs
