[package]
name = "xedio-data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-util.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
bytes.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true