[package]
name = "xdata-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kube-leader-election.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
rand.workspace = true

[build-dependencies]
tonic-prost-build = "0.14"
